--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -11,6 +11,8 @@
         <div class="span3 new_span">
             <div class="row">
                 <h1 class="span3">Tic Tac Toe</h1>
+            </div>
+            <div class="row">
                 <div class="span3">
                     <div class="input-prepend input-append">
                         <span class="add-on win_text">O won</span><strong id="o_win" class="win_times add-on">0</strong><span class="add-on">time(s)</span>
@@ -21,21 +23,23 @@
                 </div>
             </div>
 
-            <ul class="row" id="game">
-                <li id="one" class="btn span1" >+</li>
-                <li id="two" class="btn span1">+</li>
-                <li id="three" class="btn span1">+</li>
-                <li id="four" class="btn span1">+</li>
-                <li id="five" class="btn span1">+</li>
-                <li id="six" class="btn span1">+</li>
-                <li id="seven" class="btn span1">+</li>
-                <li id="eight" class="btn span1">+</li>
-                <li id="nine" class="btn span1">+</li>
+            <div class="setting">
+                <h1>Select the board size</h1>
+                <select id="select-container">
+                </select>
+            </div>
+            <div class="row">
+                <a href="#" id="play" class="btn-success btn span3 setting" >
+                    Play
+                </a>
+            </div>
+
+            <ul class="row playing" id="game">
             </ul>
 
             <div class="clr">&nbsp;</div>
             <div class="row">
-                <a href="#" id="reset" class="btn-success btn span3" >
+                <a href="#" id="reset" class="btn-success btn span3 playing" >
                     Restart
                 </a>
             </div>
