Fix wrong link title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <a href='tictactoe/index.html'>Tic Tac Toe</a>
-    <a href='bandlab/index.html'>Tic Tac Toe</a>
+    <a href='bandlab/index.html'>Bandlab</a>
 </body>
 
 </html>
