--- a/bandlab/index.html
+++ b/bandlab/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="css/User.css" />
   <link rel="stylesheet" href="css/Page1.css" />
   <link rel="stylesheet" href="css/Page2.css" />
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script crossorigin src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+  <script crossorigin src="js/react.development.js"></script>
+  <script crossorigin src="js/react-dom.development.js"></script>
+  <script crossorigin src="js/babel.min.js"></script>
 </head>
 
 <body>
