--- a/bandlab/index.html
+++ b/bandlab/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/User.css" />
   <link rel="stylesheet" href="css/Page1.css" />
   <link rel="stylesheet" href="css/Page2.css" />
+  <link rel="stylesheet" href="css/Track.css" />
   <script crossorigin src="js/react.development.js"></script>
   <script crossorigin src="js/react-dom.development.js"></script>
   <script crossorigin src="js/babel.min.js"></script>
@@ -17,6 +18,7 @@
   <div id="root"></div>
   <script src="js/User.js" type="text/babel"></script>
   <script src="js/Post.js" type="text/babel"></script>
+  <script src="js/Track.js" type="text/babel"></script>
   <script src="js/Page1.js" type="text/babel"></script>
   <script src="js/Page2.js" type="text/babel"></script>
   <script src="js/index.js" type="text/babel"></script>
