--- a/bandlab/index.html
+++ b/bandlab/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/Page1.css" />
   <link rel="stylesheet" href="css/Page2.css" />
   <link rel="stylesheet" href="css/Track.css" />
-  <script crossorigin src="js/react.development.js"></script>
-  <script crossorigin src="js/react-dom.development.js"></script>
+  <script crossorigin src="js/react.production.min.js"></script>
+  <script crossorigin src="js/react-dom.production.min.js"></script>
   <script crossorigin src="js/babel.min.js"></script>
 </head>
 
